--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link href="./style.css" rel="stylesheet" />
     <link href="./normalize.css" rel="stylesheet" />
+    <script async type="module" src="./scripts/app.js"></script>
     <title>Fisheye</title>
   </head>
   <body id="main-content">
@@ -23,6 +24,5 @@
     <main id="main-index">
       <section class="photographers_section"></section>
     </main>
-     <script type="module" src="scripts/app.js"></script>
   </body>
 </html>
