--- a/photographer.html
+++ b/photographer.html
@@ -20,7 +20,7 @@
     <link href="./style.css" rel="stylesheet" />
     <link href="./normalize.css" rel="stylesheet" />
     <title>Fisheye - photographer</title>
-    <script type="module" src="scripts/app.js"></script>
+    <script type="module" defer src="scripts/app.js"></script>
   </head>
   <body>
     <header class="home-page-header">
